# hatchway

./: .gitignore  CLAUDE.md  HATCHWAY_PLANNER.md  README.md
backend-api/: alembic.ini  pyproject.toml
backend-api/alembic/: env.py
backend-api/alembic/versions/: 828e7521f6e2_create_projects_table.py
backend-api/app/: database.py  main.py
backend-api/app/core/: config.py
backend-api/app/models/: project.py
backend-api/app/routers/: images.py  projects.py
backend-api/app/schemas/: project.py
backend-api/app/services/: cloudinary.py
desktop-app/: package-lock.json  package.json  pnpm-lock.yaml
desktop-app/src/: App.tsx  index.css  main.tsx
desktop-app/src/api/: endpoints.ts
desktop-app/src/components/: Modal.tsx  ProjectCard.tsx  ProjectForm.tsx
desktop-app/src/pages/: Dashboard.tsx
desktop-app/src/store/: projectStore.ts
desktop-app/src/types/: project.ts
